--- a/css/app.css
+++ b/css/app.css
@@ -72,13 +72,17 @@ h1 {
 }
 
 .deck .card.show {
-    font-size: 33px;
+    font-size: 33px; 
 }
 
 .deck .card.match {
     cursor: default;
     background: #02ccba;
     font-size: 33px;
+}
+
+.deck .card.disable {
+    pointer-events: none;
 }
 
 /*
@@ -103,6 +107,17 @@ h1 {
     display: inline-block;
 }
 
+#stella1 {
+    color: red;
+}
+
+#stella2 {
+    color: blue;
+}
+
+#stella3 {
+    color: lime;
+}
 .score-panel .restart {
     float: right;
     cursor: pointer;
