--- a/css/app.css
+++ b/css/app.css
@@ -29,9 +29,11 @@ body {
 }
 
 h1 {
-    font-family: 'Open Sans', sans-serif;
+    text-align: center;
+    font-family: 'Trocchi', cursive;
     font-weight: 300;
-    color: red;
+    font-size: 50px;
+    color: #b30000;
 }
 
 /*
@@ -99,6 +101,9 @@ h1 {
 
 .score-panel {
     text-align: left;
+    font-family: 'Trocchi', cursive;
+    color: #b30000;
+    font-size: 25px;
     width: 345px;
     margin-bottom: 10px;
 }
@@ -146,18 +151,33 @@ h1 {
     bottom: 0;
     left: 0;
     right: 0;
-    background: #ff9999;
+    background: #adebad;
     transition: opacity 4s;
     visibility: hidden;
 }
 
 #popup {
-    margin: 60px auto;
+    font-family: 'Trocchi', cursive;
+    text-align: center;
+    margin: 120px auto;
     padding: 20px;
-    background: #ff3333;
+    background: #5bd75b;
     border-radius: 4px;
-    border-color: blue
+    border: 4px solid #239023;
     width: 80%;
     position: relative;
     transition: all 4s ease-in-out; 
 }
+
+#popup button {
+    background-color: #ffff4d;
+    border-radius: 4px;
+    width: 40%;
+}
+
+/*Responsive*/
+@media all and (){}
+
+@media all and(){}
+
+@media all and(){}
